task 12 - fixed bug with overflow hidden on linux systems

--- a/task_12/style/css/content.css
+++ b/task_12/style/css/content.css
@@ -5,9 +5,10 @@ main {
   max-width: 1160px;
   margin: 0 auto;
   padding: 2em;
-  filter: drop-shadow(4px 5px 6px rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(0px 0px 0px #fff);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 7px rgba(0, 0, 0, 0.12);
 }
-/* line 8, ../sass/content.sass */
+/* line 9, ../sass/content.sass */
 main .buttons {
   display: flex;
   justify-content: center;
@@ -15,14 +16,14 @@ main .buttons {
   margin-bottom: 2em;
 }
 
-/* line 14, ../sass/content.sass */
+/* line 15, ../sass/content.sass */
 .wrapper {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
 
-/* line 19, ../sass/content.sass */
+/* line 20, ../sass/content.sass */
 .pizza {
   background: #efefef;
   width: 100%;
@@ -36,20 +37,20 @@ main .buttons {
   position: relative;
 }
 @media screen and (max-width: 1024px), (min-resolution: 270dpi) {
-  /* line 19, ../sass/content.sass */
+  /* line 20, ../sass/content.sass */
   .pizza {
     max-width: 350px;
     margin: 0 0 1em 0;
   }
 }
 @media screen and (max-width: 800px), (min-resolution: 270dpi) {
-  /* line 19, ../sass/content.sass */
+  /* line 20, ../sass/content.sass */
   .pizza {
     max-width: 500px;
     padding: 1em;
   }
 }
-/* line 36, ../sass/content.sass */
+/* line 37, ../sass/content.sass */
 .pizza .absolute {
   position: absolute;
   width: 100px;
@@ -57,12 +58,12 @@ main .buttons {
   right: -25px;
 }
 @media screen and (max-width: 800px), (min-resolution: 270dpi) {
-  /* line 36, ../sass/content.sass */
+  /* line 37, ../sass/content.sass */
   .pizza .absolute {
     display: none;
   }
 }
-/* line 43, ../sass/content.sass */
+/* line 44, ../sass/content.sass */
 .pizza__image {
   background: #fff;
   width: 100%;
@@ -71,37 +72,37 @@ main .buttons {
   overflow: hidden;
 }
 @media screen and (max-width: 1024px), (min-resolution: 270dpi) {
-  /* line 43, ../sass/content.sass */
+  /* line 44, ../sass/content.sass */
   .pizza__image {
     max-width: 300px;
   }
 }
 @media screen and (max-width: 800px), (min-resolution: 270dpi) {
-  /* line 43, ../sass/content.sass */
+  /* line 44, ../sass/content.sass */
   .pizza__image {
     max-width: 450px;
     min-height: auto;
   }
 }
-/* line 54, ../sass/content.sass */
+/* line 55, ../sass/content.sass */
 .pizza__image img {
   width: 100%;
   height: 100%;
   filter: contrast(150%) sepia(60%) hue-rotate(10deg);
   transition: all ease-out 0.2s;
 }
-/* line 59, ../sass/content.sass */
+/* line 60, ../sass/content.sass */
 .pizza__image img:hover {
   filter: none;
   transform: scale(1.15);
 }
 @media screen and (max-width: 1024px), (min-resolution: 270dpi) {
-  /* line 54, ../sass/content.sass */
+  /* line 55, ../sass/content.sass */
   .pizza__image img {
     filter: none;
   }
 }
-/* line 64, ../sass/content.sass */
+/* line 65, ../sass/content.sass */
 .pizza__text {
   background: #fff;
   width: 100%;
@@ -111,23 +112,23 @@ main .buttons {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 @media screen and (max-width: 1024px), (min-resolution: 270dpi) {
-  /* line 64, ../sass/content.sass */
+  /* line 65, ../sass/content.sass */
   .pizza__text {
     max-width: 300px;
   }
 }
 @media screen and (max-width: 800px), (min-resolution: 270dpi) {
-  /* line 64, ../sass/content.sass */
+  /* line 65, ../sass/content.sass */
   .pizza__text {
     max-width: 450px;
   }
 }
-/* line 75, ../sass/content.sass */
+/* line 76, ../sass/content.sass */
 .pizza__text div {
   display: flex;
   justify-content: space-between;
 }
-/* line 78, ../sass/content.sass */
+/* line 79, ../sass/content.sass */
 .pizza__text div:nth-child(2) {
   margin-top: 0.5em;
 }
